feat: add arrays grid (#13)
